feat: add handle to users
