# swagger/v1/swagger.json
@@ -17,94 +17,6 @@
           }
         }
       ],
-      "get": {
-        "summary": "List user's posts",
-        "tags": [
-          "Posts"
-        ],
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "posts retrieved successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "id": {
-                            "type": "string"
-                          },
-                          "type": {
-                            "type": "string",
-                            "example": "post"
-                          },
-                          "attributes": {
-                            "type": "object",
-                            "properties": {
-                              "id": {
-                                "type": "integer"
-                              },
-                              "content": {
-                                "type": "string"
-                              },
-                              "created_at": {
-                                "type": "string",
-                                "format": "date_time"
-                              }
-                            },
-                            "required": [
-                              "id",
-                              "content",
-                              "created_at"
-                            ]
-                          },
-                          "relationships": {
-                            "type": "object",
-                            "properties": {
-                              "user": {
-                                "type": "object",
-                                "properties": {
-                                  "data": {
-                                    "type": "object",
-                                    "properties": {
-                                      "id": {
-                                        "type": "string"
-                                      },
-                                      "type": {
-                                        "type": "string",
-                                        "example": "user"
-                                      }
-                                    }
-                                  }
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    }
-                  },
-                  "required": [
-                    "data"
-                  ]
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "user not found"
-          }
-        }
-      },
       "post": {
         "summary": "Create a post",
         "tags": [
@@ -267,6 +179,94 @@
                 }
               }
             }
+          }
+        }
+      },
+      "get": {
+        "summary": "List user's posts",
+        "tags": [
+          "User Posts"
+        ],
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "posts retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "type": {
+                            "type": "string",
+                            "example": "post"
+                          },
+                          "attributes": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "integer"
+                              },
+                              "content": {
+                                "type": "string"
+                              },
+                              "created_at": {
+                                "type": "string",
+                                "format": "date_time"
+                              }
+                            },
+                            "required": [
+                              "id",
+                              "content",
+                              "created_at"
+                            ]
+                          },
+                          "relationships": {
+                            "type": "object",
+                            "properties": {
+                              "user": {
+                                "type": "object",
+                                "properties": {
+                                  "data": {
+                                    "type": "object",
+                                    "properties": {
+                                      "id": {
+                                        "type": "string"
+                                      },
+                                      "type": {
+                                        "type": "string",
+                                        "example": "user"
+                                      }
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  },
+                  "required": [
+                    "data"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "user not found"
           }
         }
       }
@@ -740,6 +740,9 @@
       ],
       "get": {
         "summary": "Show a user",
+        "tags": [
+          "Users"
+        ],
         "security": [
           {
             "jwt": []
